--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,7 @@ spring.application.name=sistemaescolar
 spring.datasource.url=jdbc:mysql://localhost:3307/dbescola
 spring.datasource.username=root
 spring.datasource.password=MySQL@2022
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
